# warehouse

./: LICENSE  README.md  pyproject.toml
base/: global_integration.py
data_blocks/: base_data_driver.py  base_data_integrator.py  base_pipeline.py
data_blocks/drivers/: erpnext_driver.py
data_blocks/integrators/: dummy.py
operations/: pipeline1.py
operations/drivers/: erpnext_driver.py
operations/integrators/: dummy.py
orchestrator/: execute.py  orchestrator_config.py
pipeline/: base_data_driver.py  base_data_integrator.py
pipelines/: pipeline1.py
